--- a/Card/card.css
+++ b/Card/card.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
 }
 
-#queryBlock {
+.queryBlock {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -12,14 +12,16 @@ body {
   background-color: #DCDCDC;
 }
 
-#cardsBlock {
+.cardsBlock {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+          display: flex;
+          flex-wrap: wrap;
 }
 
-#query,
-#card,
+.query,
+.card,
 img {
   margin-top: auto;
   margin-bottom: auto;
@@ -31,13 +33,13 @@ img {
   width: 83%;
 }
 
-#inputQuery {
+.inputQuery {
   outline: none;
   height: 20px;
   border-radius: 15px;
 }
 
-#card {
+.card {
   text-align: center;
   background-color: #22b8e6;
   margin: 10px 0 10px 30px;
@@ -46,13 +48,13 @@ img {
   padding-top: 10px;
 }
 
-#query {
+.query {
   position: relative;
   width: 300px;
   margin: 0 auto;
 }
 
-#inputQuery {
+.inputQuery {
   width: 95%;
   height: 42px;
   padding-left: 10px;
@@ -63,7 +65,7 @@ img {
   color: #9E9C9C;
 }
 
-#buttonQuery {
+.buttonQuery {
   position: absolute;
   top: 0;
   right: 0px;
@@ -75,7 +77,7 @@ img {
   cursor: pointer;
 }
 
-#buttonQuery::before {
+.buttonQuery::before {
   content: "Click";
   font-size: 12px;
   color: black;
