--- a/Card/card.scss
+++ b/Card/card.scss
@@ -2,18 +2,20 @@ body{
     background: #E5E5E5;
     margin: 0;
 }
-#queryBlock{
+.queryBlock{
     display: flex;
     margin:0;
     height: 50px;
     background-color: #DCDCDC;
 }
-#cardsBlock{
+.cardsBlock{
     justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#query,
-#card,
+.query,
+.card,
 img{
     margin-top: auto;
     margin-bottom: auto;
@@ -23,12 +25,12 @@ img{
 img{
     width: 83%;
 }
-#inputQuery{
+.inputQuery{
     outline:none;
     height: 20px;
     border-radius: 15px;
 }
-#card{
+.card{
     text-align: center;
     background-color: rgb(34, 184, 230);
     margin: 10px 0 10px 30px;
@@ -37,13 +39,13 @@ img{
     padding-top: 10px;
 }
 
-#query{
+.query{
     position:relative;
     width: 300px;
     margin: 0 auto;
 }
 
-#inputQuery{
+.inputQuery{
     width: 95%;
     height: 42px;
     padding-left: 10px;
@@ -54,7 +56,7 @@ img{
     color: #9E9C9C;
 }
 
-#buttonQuery{
+.buttonQuery{
 position: absolute;
 top: 0;
 right: 0px;
@@ -66,7 +68,7 @@ border-radius: 0 5px 5px 0;
 cursor: pointer;
 }
 
-#buttonQuery::before{
+.buttonQuery::before{
     content: "Click";
     font-size: 12px;
     color:black;
