--- a/Card/card.scss
+++ b/Card/card.scss
@@ -2,21 +2,28 @@ body{
     background: #E5E5E5;
     margin: 0;
 }
+
 .queryBlock{
     display: flex;
     margin:0;
-    height: 50px;
+    height: 49px;
     background-color: #DCDCDC;
 }
 .cardsBlock{
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    background-color: rgb(237,237,237);
+}
+p{
+    // text-decoration: underline;
+    // margin-top: 1px;
 }
 
 .query,
 .card,
-img{
+img,
+p{
     margin-top: auto;
     margin-bottom: auto;
     margin-left: auto;
@@ -29,31 +36,36 @@ img{
     outline:none;
     height: 20px;
     border-radius: 15px;
-}
-.card{
-    text-align: center;
-    background-color: rgb(34, 184, 230);
-    margin: 10px 0 10px 30px;
-    border: 4px solid black;
-    border-radius: 25px;
-    padding-top: 10px;
-}
-
-.query{
-    position:relative;
-    width: 300px;
-    margin: 0 auto;
-}
-
-.inputQuery{
     width: 95%;
     height: 42px;
     padding-left: 10px;
     border: 2px solid #7BA7AB;
     border-radius: 5px;
     outline: none;
-    background: #F9F0DA;
-    color: #9E9C9C;
+    background: rgb(241,243,244);
+    color: #0c0808;
+    font-family: Times, Times New Roman, serif;
+}
+.card{
+    text-align: center;
+    background-color: rgb(164,179,210);
+    margin: 10px 0 10px 30px;
+    border-radius: 25px;
+    padding-top: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    padding: 10px;
+}
+
+.card:hover{
+    transform: scale(0.9);
+    box-shadow: 12px 14px 28px rgba(0,0,0,0.25),
+                12px 10px 10px rgba(0,0,0,0.22)
+}
+
+.query{
+    position:relative;
+    width: 300px;
+    margin: 0 auto;
 }
 
 .buttonQuery{
@@ -67,8 +79,12 @@ background: #7BA7AB;
 border-radius: 0 5px 5px 0;
 cursor: pointer;
 }
+.buttonQuery:hover{
+    background-color: rgb(40,139,165)
+}
 
 .buttonQuery::before{
+    font-size: Arial, sans-serif;
     content: "Click";
     font-size: 12px;
     color:black;
